--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,9 +1,10 @@
 .span8{align: "center"}
   .row
     %h2.lead Family Members
-  .row
-    .span2
-      = link_to " Member", new_user_path, class: "i icon-plus btn btn-success btn-small"
+  -if current_user.facebook_id != "" && current_user.facebook_id != nil
+    .row
+      .span2
+        = link_to "New Member", new_user_path, class: "btn btn-small"
   .row
     .span7
       %p
