--- a/app/views/users/_card.html.haml
+++ b/app/views/users/_card.html.haml
@@ -12,7 +12,7 @@
   %div.well.well-small
     .row
       .span2
-        = image_tag(gravatar_for(user.email ? user.email : user.name))
+        = image_tag(gravatar_for(user.email != "" ? user.email : user.name))
       .span3
         %h2.lead
           = link_to user.name, user_path(user)
