--- a/app/views/users/_header.html.haml
+++ b/app/views/users/_header.html.haml
@@ -8,7 +8,7 @@
       .lead
         = @user.credits
         credits
-  -if current_user.facebook_id != "" && current_user.facebook_id != nil
+  -if current_user.user_type >= 10
     .row.span7{align: "right"}
       = link_to "New Chore", new_task_path, class: "btn btn-small"
       = link_to 'Edit', edit_user_path(@user), class: "btn btn-small"
