--- a/app/views/families/_card.html.haml
+++ b/app/views/families/_card.html.haml
@@ -3,14 +3,12 @@
     .row
       .span1
         = image_tag(gravatar_for(user.email == nil || user.email == "" ? user.name : user.email))
-      .span3
-        %h2.lead
-          = link_to user.name, user_path(user)
+      .span4
+        .lead= link_to user.name, user_path(user)
+        -if user.user_type >= 10
+          .muted (Parent)
       .span2{id: "credits-#{user.id}"}
         -if user.credits
           %h2.lead
             = user.credits
             credits
-      .span1
-        -if FamilyMember.find_by_user_id(user.id).admin
-          Parent
