--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -5,10 +5,12 @@
   .muted= @access_url
   -if current_user.user_type >= 10
     .row
-      .span2
+      .span3
         = link_to "New Member", new_user_path, class: "btn btn-small"
+        = link_to "Edit", edit_family_path(@family), class: "btn btn-small"
+        = link_to 'Delete', @family, confirm: 'Are you sure?', method: :delete, class: "btn btn-small"
 .row
   .span7
     %p
-      -@users.sort_by{|x| x.facebook_id.to_i }.reverse.each do |user|
+      -@users.sort_by{|x| x.user_type.to_i }.reverse.each do |user|
         =render partial: 'card', locals: { user: user }
