--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -20,6 +20,11 @@
       = f.text_field :email, placeholder: "Email"
     %dt
       .field
+      %h5 Pin
+    %dd
+      = f.text_field :pin, placeholder: "4 digit pin", :maxlength => 4
+    %dt
+      .field
       %h5 Parent
     %dd
       = f.check_box :user_type
