user email uniqueness check, changed family url string to include family name, changed login form to have email field

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,17 +2,17 @@
   .hero-unit{align: "center"}
     %h1 Jarvis
     %p Home management system.
-    %p
+    %br
       -if current_user
         = link_to 'Sign Out', signout_path, :class => 'btn btn-large btn-danger'
       -else
         = form_tag sessions_path do
           .field
             = label_tag :email
-            = text_field_tag :email, params[:email]
+            = email_field_tag :email, params[:email], class: "input-medium"
           .field
             = label_tag :password
-            = password_field_tag :password
+            = password_field_tag :password, '', class: "input-medium"
           .actions
             = submit_tag "Log In", class: "btn"
-        = link_to "Sign Up", signup_path
+            = link_to "Sign Up", signup_path, class: "btn"
