--- a/app/views/families/_card.html.haml
+++ b/app/views/families/_card.html.haml
@@ -1,9 +1,9 @@
-.span8
+.span8{align: "center"}
   %div.well.well-small
     .row
-      .span1
+      .span2
         = link_to (image_tag(gravatar_for(user.email == nil || user.email == "" ? user.name : user.email))), user_path(user)
-      .span4
+      .span3
         .lead= link_to user.name, user_path(user)
         -if user.user_type >= 10
           .muted (Parent)
