--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -13,10 +13,11 @@
           %a{:href => "#"} Items
         %li
           = link_to 'Purchases', purchases_path
-  .row
-    .span2
-      = link_to "New Item", new_item_path, class: "btn btn-small"
-      %p
+  -if current_user.user_type >= 10
+    .row
+      .span2
+        = link_to "New Item", new_item_path, class: "btn btn-small"
+        %p
   .row
     %p
       -@items.each do |item|
