--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,8 @@
             %li= link_to "My Profile", user_path(current_user)
             - family_member = FamilyMember.find_by_user_id(current_user.id)
             -if family_member
-              %li= link_to current_user.family.name + " Family", family_path(Family.find_by_id(family_member.family_id))
+              -if current_user.user_type >= 10
+                %li= link_to current_user.family.name + " Family", family_path(Family.find_by_id(family_member.family_id))
               %li= link_to "Store", items_path
             -else
               %li= link_to "Create Family", new_family_path
