--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,3 +32,24 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+input#family_name{
+  border:0px;
+  font-size: 21px;
+  font-weight: 200;
+  box-shadow: inset 1px 0px 0px 0px;
+}
+.family-cards div.well.well-small{
+  width:90%;
+}
+.family-cards div.user-title{
+  width:140px;
+}
+.family-cards i{
+  font-size:14px;
+  text-align: left;
+}
+.family-cards .edit-content .btn{
+  padding:0px;
+  margin:3px;
+  width:65px;
+}
