added ajax delete for family members

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -38,17 +38,17 @@ input#family_name{
   font-weight: 200;
   box-shadow: inset 1px 0px 0px 0px;
 }
-.family-cards div.well.well-small{
+.family-card div.well.well-small{
   width:90%;
 }
-.family-cards div.user-title{
+.family-card div.user-title{
   width:140px;
 }
-.family-cards i{
+.family-card i{
   font-size:14px;
   text-align: left;
 }
-.family-cards .edit-content .btn{
+.family-card .edit-content .btn{
   padding:0px;
   margin:3px;
   width:65px;
