--- a/app/views/families/my_family.html.haml
+++ b/app/views/families/my_family.html.haml
@@ -6,12 +6,12 @@
     Family
 
   -@users.each do |user|
-    = link_to (image_tag(gravatar_for(user.email == nil || user.email == "" ? user.name : user.email))), user_path(user)
+    = image_tag(gravatar_for(user.email == nil || user.email == "" ? user.name : user.email))
     %div
       = form_tag sessions_path do
         .field
           = label_tag :pin, 'PIN'
-          = password_field_tag :pin, '', class: "input-small", :maxlength => 4
+          = password_field_tag :pin, '', class: "input-mini", :maxlength => 4
         .field
           = hidden_field_tag :id, params[:id], value: user.id
         .actions
