--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -2,13 +2,14 @@
   %h2.lead
     = @family.name
     Family
-  .muted= @access_url
+  .muted= link_to 'Link for child login', @access_url
+  %br
   -if current_user.user_type >= 10
     .row
       .span3
         = link_to "New Member", new_user_path, class: "btn btn-small"
         = link_to "Edit", edit_family_path(@family), class: "btn btn-small"
-        = link_to 'Delete', @family, confirm: 'Are you sure?', method: :delete, class: "btn btn-small"
+        = link_to 'Delete', @family, confirm: 'Are you sure you want to delete this family?  All child accounts will be deleted as well.', method: :delete, class: "btn btn-small"
 .row
   .span7
     %p
