--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,29 +9,35 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
 .navbar.navbar-inverse.navbar-fixed-top
   .navbar-inner
-    .container
+    .container-fluid
       %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.brand{:href => "#{root_url}"} Jarvis
+      = link_to image_tag("jarvis.png"), root_url, class: "brand"
       .nav-collapse
-        %ul.nav
+        %ul.nav.pull-right
           -if current_user
-            %li= link_to "My Profile", user_path(current_user)
-            - family_member = FamilyMember.find_by_user_id(current_user.id)
-            -if family_member
-              -if current_user.user_type >= 10
-                %li= link_to current_user.family.name + " Family", family_path(Family.find_by_id(family_member.family_id))
-              %li= link_to "Store", items_path
-            -else
-              %li= link_to "Create Family", new_family_path
-            %li= link_to '| Sign Out |', signout_path
-    .container{style: "position:fixed; top:50px; right:10px; width:300px;"}
+            %li.dropdown
+              %a#userdrop.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :role => "button"}
+                %i.icon-user
+                = image_tag(gravatar_for(current_user.email == nil || current_user.email == "" ? current_user.name : current_user.email), size: "30x30")
+                = current_user.name
+                %i.icon-caret-down
+              %ul.dropdown-menu{"aria-labelledby" => "userdrop", :role => "menu"}
+                %li
+                  =link_to 'Settings', edit_user_path(current_user)
+                %li
+                  = link_to 'Sign Out', signout_path
+    .container{style: "position:fixed; top:55px; right:100px; width:300px;"}
       -if flash.count > 0
-        .alert.fade.in.alert-success{align: "center"}
+        .alert.fade.in.alert-danger{align: "center"}
           -flash.each do |name, msg|
             =content_tag :div, msg, :id => "flash_#{name}"
-.container
-  .row
-    =yield
+.container-fluid
+  .row-fluid
+    .span2
+      -if current_user
+        = render 'layouts/sidebar'
+    .span10
+      = yield
