trying to get things to line up better, modified chore to auto select user

--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -66,7 +66,7 @@
       %dd
         Name
       %dd
-        = f.collection_select :user_id, @users, :id, :name, value: ""
+        = f.collection_select :user_id, @users, :id, :name, selected: params[:user_id]
     %dt
       %h5 What?
       %dd
