--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to image_tag("jarvis.png"), root_url, class: "brand"
+      = link_to image_tag("jarvis.png"), '#', class: "brand"
       .nav-collapse
         %ul.nav.pull-right
           -if current_user
@@ -25,8 +25,9 @@
                 = current_user.name
                 %i.icon-caret-down
               %ul.dropdown-menu
-                %li
-                  =link_to 'Settings', edit_user_path(current_user)
+                -if current_user.parent
+                  %li
+                    =link_to 'Settings', edit_user_path(current_user)
                 %li
                   = link_to 'Sign Out', signout_path
     .container{style: "position:fixed; top:55px; right:100px; width:300px;"}
