--- a/app/views/families/_card.html.haml
+++ b/app/views/families/_card.html.haml
@@ -15,6 +15,6 @@
             = user.credits
             credits
       .span.edit-content
-        =ilink_to 'plus', 'Chore', new_user_task_path(user), class: "btn btn-small btn-comment"  
-        =ilink_to 'edit', 'Edit', edit_user_path(user), class: "btn btn-small btn-comment"
-        =ilink_to 'trash', 'Delete', user, confirm: 'Are you sure?', class: "btn btn-small btn-comment", id: 'delete-user'
+        =link_to ' Chore', new_user_task_path(user), class: "i icon-plus btn"  
+        =link_to ' Edit', edit_user_path(user), class: "i icon-edit btn"
+        =link_to ' Delete', user, confirm: 'Are you sure?', class: "i icon-trash btn", id: 'delete-user'
