--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,30 +1,47 @@
-%div{id: "item-#{item.id}"}
-  .span7{align: "center"}
-    %div.well.well-small
-      .row
-        .span1
-          -if item.thumbnail == ""
-            = image_tag('product.png', :class => 'img-rounded', :size => "50x50")
-          -else
-            = image_tag(item.thumbnail, :class => 'img-rounded', :size => "50x50")
-        .span2
-          .lead= item.name
-        .span2
-          .lead
-            = item.price
-            credits
-        .span1
-          = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
-          %div{id: "itemCount-#{item.id}"}
-            .badge.badge-inverse= Purchase.where(item_id: item.id).count
-      .row
-        .span6
-          .muted= item.description
+.item{id: "item-#{item.id}"}
+  .span8.well.well-small
+    %div.hidden-phone.hidden-tablet
+      %table{align: "center", width: "100%"}
+        %tr
+          %td{rowspan: "2"}
+            -if item.thumbnail == ""
+              = image_tag('product.png', :class => 'img-rounded', :size => "50x50")
+            -else
+              = image_tag(item.thumbnail, :class => 'img-rounded', :size => "50x50")
+          %td{align: "center"}
+            .lead= item.name
+          %td{align: "center"}
+            .lead= item.price.to_s + ' credits'
+          %td{align: "center"}
+            = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
+            %div{id: "itemCount-#{item.id}"}
+              .badge.badge-inverse= Purchase.where(item_id: item.id).count
+        %tr
+          %td{colspan: "2", align: "center"}
+            .muted= item.description
+          %td{align: "center"}
+            =link_to ' Edit', edit_item_path(item), class: "i icon-edit btn btn-small"
+            =link_to ' Delete', item, confirm: 'Are you sure?', class: "i icon-trash btn btn-small", method: :delete, remote: true
 
-  -if current_user.user_type >= 10
-    .span1
-      %div.well.well-small
-        = link_to 'Edit', edit_item_path(item), class: "btn btn-mini"
-        %p
-        = link_to 'Delete', item, confirm: 'Are you sure?', method: :delete, class: "btn btn-mini", remote: true
-    %p
+    %dev.visible-phone.visible-tablet{align: "center"}
+      .span2
+        %table{width: "100%"}
+          %tr
+            %td
+              -if item.thumbnail == ""
+                = image_tag('product.png', :class => 'img-rounded', :size => "50x50")
+              -else
+                = image_tag(item.thumbnail, :class => 'img-rounded', :size => "50x50")
+            %td{colspan: "2"}
+              .lead= item.name
+          %tr
+            %td
+              = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
+              %div{id: "itemCount-#{item.id}"}
+                .badge.badge-inverse= Purchase.where(item_id: item.id).count
+            %td
+              .lead= item.price.to_s + ' credits'
+      -if current_user.user_type >= 10
+        .span.edit-content
+          =link_to ' Edit', edit_item_path(item), class: "i icon-edit btn btn-small"
+          =link_to ' Delete', item, confirm: 'Are you sure?', class: "i icon-trash btn btn-small", method: :delete, remote: true
