--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,8 @@
                 = current_user.name
                 %i.icon-caret-down
               %ul.dropdown-menu
+                %li
+                  = link_to 'Profile', current_user
                 -if current_user.parent
                   %li
                     =link_to 'Settings', edit_user_path(current_user)
