--- a/app/views/purchases/index.html.haml
+++ b/app/views/purchases/index.html.haml
@@ -6,23 +6,25 @@
       .lead
         = current_user.credits
         credits
+    -if current_user.user_type >= 10
+      .row.span7{align: "right"}
+        = link_to " Item", new_item_path, class: "i icon-plus btn btn-small btn-comment"
   .row
-    .span8
+    .span10
       %ul.nav.nav-tabs
         %li
           = link_to 'Items', items_path
         %li.active
           %a{:href => "#"} Purchases
-  .row
-    .lead Recent Purchases
-  .row
-    .span8
-      %table.table
-        -@purchases.each do |purchase|
-          %tr{id: "purchase-#{purchase.id}"}
-            %td
-              .span2= purchase.item.name
-              .span2= purchase.user.name
-              .span2= Date.parse(purchase.created_at.to_s)
-              .span1
-                = link_to 'Refund', purchase, method: :delete, class: "btn btn-small", remote: true
+.row
+  .span10
+    %h4 Recent Purchases
+    %table.table
+      -@purchases.each do |purchase|
+        %tr{id: "purchase-#{purchase.id}"}
+          %td
+            .span2= purchase.item.name
+            .span2= purchase.user.name
+            .span2= Date.parse(purchase.created_at.to_s)
+            .span1
+              = link_to 'Refund', purchase, method: :delete, class: "btn btn-small", remote: true
