--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,18 +20,23 @@
           -if current_user
             %li.dropdown.userdrop
               %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-                %i.icon-user
-                = image_tag(gravatar_for(current_user.email == nil || current_user.email == "" ? current_user.name : current_user.email), size: "30x30")
                 = current_user.name
-                %i.icon-caret-down
+                %i.icon-chevron-down
+                = image_tag(gravatar_for(current_user.email == nil || current_user.email == "" ? current_user.name : current_user.email), size: "30x30")
               %ul.dropdown-menu
                 %li
-                  = link_to 'Profile', current_user
+                  %a{href: "#{user_path(current_user)}"}
+                    %i.icon-user
+                    Profile
                 -if current_user.parent
                   %li
-                    =link_to 'Settings', edit_user_path(current_user)
+                    %a{href: "#{edit_user_path(current_user)}"}
+                      %i.icon-edit
+                      Settings
                 %li
-                  = link_to 'Sign Out', signout_path
+                  %a{href: "#{signout_path}"}
+                    %i.icon-road
+                    Sign Out
     .container{style: "position:fixed; top:55px; right:100px; width:300px;"}
       -if flash.count > 0
         .alert.fade.in.alert-danger{align: "center"}
