--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -11,27 +11,39 @@
           %a{href: "#{user_path(current_user)}"}
             %i.icon-user
             Profile
-      -if current_user.parent
-        -if params[:controller] == 'families'
+      -if current_user.family
+        -if current_user.parent
+          -if params[:controller] == 'families'
+            %li.active
+              %a{href: "#{family_path(current_user.family)}"}
+                %i.icon-home
+                Family
+          -else
+            %li
+              %a{href: "#{family_path(current_user.family)}"}
+                %i.icon-home
+                Family
+        -if params[:controller] == 'items' || params[:controller] == 'purchases'
           %li.active
-            %a{href: "#{family_path(current_user.family)}"}
-              %i.icon-home
-              Family
+            %a{href: "#{items_path}"}
+              %i.icon-gift
+              Store
         -else
           %li
-            %a{href: "#{family_path(current_user.family)}"}
-              %i.icon-home
-              Family
-      -if params[:controller] == 'items' || params[:controller] == 'purchases'
-        %li.active
-          %a{href: "#{items_path}"}
-            %i.icon-gift
-            Store
+            %a{href: "#{items_path}"}
+              %i.icon-gift
+              Store
       -else
-        %li
-          %a{href: "#{items_path}"}
-            %i.icon-gift
-            Store
+        -if params[:controller] == 'families'
+          %li.active
+            %a{href: "#{new_family_path}"}
+              %i.icon-home
+              Create Family
+        -else
+          %li
+            %a{href: "#{new_family_path}"}
+              %i.icon-home
+              Create Family
   .tabtopnav.visible-phone
     %ul.nav.nav-tabs
       -if params[:controller] == 'users'
@@ -44,24 +56,36 @@
           %a{href: "#{user_path(current_user)}"}
             %i.icon-user
             Profile
-      -if current_user.parent
-        -if params[:controller] == 'families'
+      -if current_user.family
+        -if current_user.parent
+          -if params[:controller] == 'families'
+            %li.active
+              %a{href: "#{family_path(current_user.family)}"}
+                %i.icon-home
+                Family
+          -else
+            %li
+              %a{href: "#{family_path(current_user.family)}"}
+                %i.icon-home
+                Family
+        -if params[:controller] == 'items' || params[:controller] == 'purchases'
           %li.active
-            %a{href: "#{family_path(current_user.family)}"}
-              %i.icon-home
-              Family
+            %a{href: "#{items_path}"}
+              %i.icon-gift
+              Store
         -else
           %li
-            %a{href: "#{family_path(current_user.family)}"}
-              %i.icon-home
-              Family
-      -if params[:controller] == 'items' || params[:controller] == 'purchases'
-        %li.active
-          %a{href: "#{items_path}"}
-            %i.icon-gift
-            Store
+            %a{href: "#{items_path}"}
+              %i.icon-gift
+              Store
       -else
-        %li
-          %a{href: "#{items_path}"}
-            %i.icon-gift
-            Store
+        -if params[:controller] == 'families'
+          %li.active
+            %a{href: "#{new_family_path}"}
+              %i.icon-home
+              Create Family
+        -else
+          %li
+            %a{href: "#{new_family_path}"}
+              %i.icon-home
+              Create Family
