--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -17,7 +17,7 @@
       .field
       %h5 Email
     %dd
-      = f.text_field :email, placeholder: "Email"
+      = f.email_field :email, placeholder: "Email"
     %div{hidden: current_user ? true : false}
       %dt
         .field
@@ -30,16 +30,17 @@
       %dd
         = f.password_field :password_confirmation, placeholder: "Confirm Password"
     -if current_user
-      %dt
-        .field
-        %h5 Pin
-      %dd
-        = f.text_field :pin, placeholder: "4 digit pin", :maxlength => 4
-      %dt
-        .field
-        %h5 Parent
-      %dd
-        = f.check_box :user_type
+      -if !@user.parent
+        %dt
+          .field
+          %h5 Pin
+        %dd
+          = f.text_field :pin, placeholder: "4 digit pin", :maxlength => 4
+        %dt
+          .field
+          %h5 Parent
+        %dd
+          = f.check_box :user_type
     %dt
       .field
         %h5 Avatar
